Corrections Contraste

--- a/style.css
+++ b/style.css
@@ -445,7 +445,7 @@ nav .caret {
     font-size: 15px;
     text-transform: uppercase;
     font-weight: 700;
-    color: #333333!important;
+    color: #333333;
 }
 
 .mg-lg {
